gke/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-app
spec:
  selector:
    matchLabels:
      app: gateway-app
  template:
    metadata:
      labels:
        app: gateway-app
    spec:
      containers:
      - name: gateway-app
        image: asia-southeast1-docker.pkg.dev/arthetic/arthetic-images/gateway-svc:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4000
