gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
spec:
  selector:
    app: gateway-app
  ports:
  - port: 80
    targetPort: 4000
