gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: arthetic-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "arthetic-app-ip"
    ingress.gcp.kubernetes.io/pre-shared-cert: "arthetic-app-ingress-cer"
spec:
  defaultBackend:
    service:
      name: gateway-svc
      port:
        number: 80
  rules:
    - host: www.arthetic.live
      http:
        paths:
          - path: /api/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway-svc
                port:
                  number: 80
